<resources>
    <string name="app_name">boxingBuddy</string>

    <!-- TitleFragment -->
    <string name="welcome_text">Let\'s get started!</string>
    <string name="play_button_text">Exercise!</string>
    <string name="logo_desc">A barbell</string>

    <!-- WorkoutFragment -->
    <string name="hello_blank_fragment">Get your ass to mars!</string>
    <string name="done_text">Done!</string>
    <string name="skip_text">Skip!</string>
    <string name="exercise_is">Your current exercise...</string>
    <string name="exercise_string">Rub your butt!</string>

</resources>
